--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,93 @@
-body { margin: 30px auto; width: 70%; }
-h1 { text-align: center; }
-h2 { text-align: center; }
+* {
+    box-sizing: border-box;
+}
+
+html, body {
+    width: 100%;
+    height: 100%;
+    margin: 0;
+    padding: 0.6rem 1rem;
+}
+
+body {
+    background: #333 url('https://www.toptal.com/designers/subtlepatterns/patterns/repeated-square-dark.png') repeat 0 0;
+}
+
+article {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+main {
+    flex-grow: 1;
+}
+
+header, main, footer {
+    flex-shrink: 0;
+}
+
+.api-ui {
+    display: flex;
+    justify-content: flex-start;
+    margin: -1rem 0 2rem 0;
+}
+
+.api-ui button {
+    border: none;
+    padding: 1rem 2rem;
+    margin: 1rem;
+    border-radius: 0.4rem;
+    color: #fff;
+    font-size: 1rem;
+    background-color: #464646;
+}
+
+.api-ui button.blue {
+    background-color: #006cb6;
+}
+
+.api-ui button.green {
+    background-color: #00c010;
+}
+
+.api-ui button.yellow {
+    color: #000;
+    background-color: #fdd400;
+}
+
+.api-ui button:hover {
+    cursor: grab;
+    filter: brightness(110%);
+}
+
+.api-ui button:active {
+    cursor: grabbing;
+    filter: brightness(80%);
+}
+
+.api-ui select {
+    border: none;
+    border-radius: 0.4rem;
+    padding: 1rem 2rem;
+    margin: 1rem;
+    font-size: 1rem;
+}
+
+.sources {
+    display: flex;
+    flex-direction: column;
+}
+
+.sources a {
+    display: block;
+    margin: 0.2rem 0;
+    text-decoration: none;
+    color: #666;
+    font-size: 1rem;
+}
+
+.sources a:hover {
+    color: #fff;
+}
